🎨 Fix scrollbar.

--- a/src/app.css
+++ b/src/app.css
@@ -6,13 +6,13 @@
   :root {
     --sb-track-color: rgb(229 229 229 / 0.5);
     --sb-thumb-color: #d4d4d4;
-    --sb-size: 7px;
+    --sb-size: 8px;
   }
 
   .dark {
     --sb-track-color: #171717;
     --sb-thumb-color: #404040;
-    --sb-size: 7px;
+    --sb-size: 8px;
   }
 }
 
@@ -34,15 +34,15 @@
     background: var(--sb-thumb-color);
   }
 
-  aside::-webkit-scrollbar {
+  nav::-webkit-scrollbar {
     width: var(--sb-size);
   }
 
-  aside::-webkit-scrollbar-track {
+  nav::-webkit-scrollbar-track {
     background: var(--sb-track-color);
   }
 
-  aside::-webkit-scrollbar-thumb {
+  nav::-webkit-scrollbar-thumb {
     background: var(--sb-thumb-color);
   }
 }
